fix spacing issue for footer

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,7 +1,5 @@
 footer {
-  // height: 300px;
   color: #333;
-  margin-top: 200px;
   padding-top: 40px;
   padding-bottom: 30px;
   background: $gray-lighter;
